# quote-engine

./: .gitignore  compose.yaml  docker-compose.yml  readme  readme.md
backend/: Cargo.toml
backend/migrations/: 20250105_init.sql  20250111_init.sql  20250118_init.sql  20250122_init.sql
backend/src/: database.rs  main.rs  omnierror.rs  setup.rs  state.rs  workers.rs
backend/src/quotes/: mod.rs  placeholder.rs
backend/src/quotes/authors/: mod.rs
backend/src/router/: auth.rs  authors.rs  health.rs  infra.rs  mod.rs  quotes.rs  users.rs
backend/src/user/: attributes.rs  infradmin.rs  mod.rs  patch.rs  queries.rs  validity.rs
backend/src/user/auth/: cookie.rs  crypto.rs  error.rs  mod.rs  password.rs  session.rs  userimpl.rs
engine/: .dockerignore  Cargo.toml  Dockerfile
engine/migrations/: 20241208_init.sql
engine/src/: auth.rs  error.rs  logs.rs  main.rs  permissions.rs  router.rs  setup.rs
engine/src/all_none_trait/: mod.rs
engine/src/auth/: decode_basic_auth.rs  error.rs  header_parse.rs  mod.rs  validate.rs
engine/src/authors/: extended.rs  mod.rs
engine/src/db/: create_default_admin.rs  log_events.rs  mod.rs  queries.rs  tables.rs  users.rs
engine/src/models/: mod.rs
engine/src/routes/: attributes.rs  auth.rs  authors.rs  lines.rs  logs.rs  mod.rs  permissions.rs  quotes.rs  users.rs
engine/src/users/: attributes.rs  defaultadmin.rs  mod.rs  patch.rs  sessions.rs
facade/: .dockerignore  Dockerfile  package-lock.json  package.json
facade/src/app/: layout.tsx  page.tsx
facade/src/app/authors/: page.tsx
facade/src/app/login/: page.tsx
facade/src/app/logs/: page.tsx
facade/src/app/users/: page.tsx
facade/src/app/users/[id]/change-password/: page.tsx
facade/src/components/: CardStat.tsx  CreateUser.tsx  DashUser.tsx  Dashboard.tsx  DialogDrawer.tsx  Navigation.tsx
facade/src/lib/: qfetch.ts
facade/src/types/: user.ts
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/authors/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/quotes/create/: QuoteMaker.tsx  page.tsx
frontend/src/components/: DottedEffect.tsx  GrainEffect.tsx  Navigation.tsx  Quote.tsx  Sidenav.tsx  app-sidebar.tsx  nav-main.tsx  nav-user.tsx
frontend/src/components/author/: Author.tsx  CopyID.tsx  DeleteAuthorButton.tsx  New.tsx
frontend/src/components/ui/: ThemeToggle.tsx
frontend/src/lib/: option.ts  utils.ts
frontend/src/types/: users.ts
scripts/: devdb-init.sh
